--- a/demo-juc/pom.xml
+++ b/demo-juc/pom.xml
@@ -8,12 +8,11 @@
         <artifactId>dyd-demo</artifactId>
         <version>1.0-SNAPSHOT</version>
     </parent>
+    <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <java.version>1.8</java.version>
+    </properties>
 
     <artifactId>demo-juc</artifactId>
 
-    <properties>
-        <maven.compiler.source>8</maven.compiler.source>
-        <maven.compiler.target>8</maven.compiler.target>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    </properties>
 </project>
